Decrease font size.

--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
 		<!--[if lt IE 9]>
 		<script src="lib/js/html5shiv.js"></script>
 		<![endif]-->
+        <style>
+            .reveal {
+                font-size: 30px;
+            }
+        </style>
 	</head>
 
 	<body>
