--- a/index.html
+++ b/index.html
@@ -187,8 +187,9 @@
                 <section>
                     <h1>Conclusion</h1>
                     <h2>Extending Drupal has never been easier.</h2>
-                    <p class="fragment">Find this presentation at <a href="http://slideshare.net/bartfeenstra">http://slideshare.net/bartfeenstra</a>.</p>
-                    <p class="fragment">Find me at <a href="http://twitter.com/bartfeenstra">@BartFeenstra</a> and <a href="http://mynameisbart.com">http://mynameisbart.com</a>.</p>
+                    <p class="fragment">Review this presentation at <a href="http://slideshare.net/bartfeenstra">http://slideshare.net/bartfeenstra</a>.</p>
+                    <p class="fragment">Find the Plugin module at <a href="http://drupal.org/project/plugin">http://drupal.org/project/plugin</a>.</p>
+                    <p class="fragment">I am <a href="http://drupal.org/u/xano">Xano</a>, <a href="http://twitter.com/bartfeenstra">@BartFeenstra</a>, and <a href="http://mynameisbart.com">http://mynameisbart.com</a>.</p>
                     <h2 class="fragment">Do you have any questions?</h2>
                 </section>
 			</div>
