Added plugn configuration schema name.

--- a/index.html
+++ b/index.html
@@ -167,9 +167,10 @@
                         <style>.aerial-view .attribution:after { content: "ter-burg @ Flickr"; }</style>
                         <h1 class="contrast">Administrative overview</h1>
                     </section>
-                    <section data-background="./images/tube-map.jpg" data-state="attribution-active tube-map">
+                    <section class="contrast" data-background="./images/tube-map.jpg" data-state="attribution-active tube-map">
                         <style>.tube-map .attribution:after { content: "24736216@N07 @ Flickr"; }</style>
-                        <h1 class="contrast">Configuration schemas</h1>
+                        <h1>Configuration schemas</h1>
+                        <p><code>plugin.plugin_configuration.*.*</code></p>
                     </section>
                     <section data-background="./images/funnel.jpg" data-state="attribution-active funnel">
                         <style>.funnel .attribution:after { content: "fdctsevilla @ Flickr"; }</style>
