Added plugin definition related interfaces.

--- a/index.html
+++ b/index.html
@@ -172,9 +172,11 @@
                         <h1>Configuration schemas</h1>
                         <p><code>plugin.plugin_configuration.*.*</code></p>
                     </section>
-                    <section data-background="./images/funnel.jpg" data-state="attribution-active funnel">
+                    <section class="contrast" data-background="./images/funnel.jpg" data-state="attribution-active funnel">
                         <style>.funnel .attribution:after { content: "fdctsevilla @ Flickr"; }</style>
-                        <h1 class="contrast">Typed plugin definition API</h1>
+                        <h1>Typed plugin definition API</h1>
+                        <p class="fragment">Now: <code>PluginDefinitionMapperInterface</code></p>
+                        <p class="fragment">Future: <code>PluginDefinitionInterface</code></p>
                     </section>
                     <section data-background="./images/cursor.jpg" data-state="attribution-active cursor">
                         <style>.cursor .attribution:after { content: "86530412@N02 @ Flickr"; }</style>
