Added contact info to the opening slide.

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
                 <section>
                     <h1>The Drupal 8 plugin system: extensibility for all</h1>
                     <p>DrupalCamp North 2015</p>
+                    <p>I am <a href="http://drupal.org/u/xano">Xano</a>, <a href="http://twitter.com/bartfeenstra">@BartFeenstra</a>, and <a href="http://mynameisbart.com">http://mynameisbart.com</a>.</p>
                 </section>
                 <section class="contrast" data-background="./images/socket.jpg" data-state="attribution-active socket">
                     <style>.socket .attribution:after { content: "idea-saras @ Flickr"; }</style>
