Added discovery method use cases.

--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
                     <style>.discovery .attribution:after { content: "skynoir @ Flickr"; }</style>
                     <h1>Discovery methods</h1>
                     <ul>
-                        <li class="fragment">Annotated class discovery</li>
-                        <li class="fragment">YAML discovery</li>
+                        <li class="fragment">Annotated class discovery (mostly different logic)</li>
+                        <li class="fragment">YAML discovery (mostly reused logic)</li>
                         <li class="fragment">Static discovery (testing)</li>
                         <li class="fragment">Hook discovery (deprecated)</li>
                     </ul>
