Added image licenses.

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
                 font-size: 30px;
             }
             p.attribution {
-                bottom: 5%;
+                bottom: 3%;
                 display: none;
-                font-size: 0.5em;
-                left: 5%;
+                font-size: 0.4em;
+                left: 3%;
                 padding: 1em;
                 position: absolute;
                 z-index: 999;
@@ -65,7 +65,7 @@
                     <p>I am <a href="http://drupal.org/u/xano">Xano</a>, <a href="http://twitter.com/bartfeenstra">@BartFeenstra</a>, and <a href="http://mynameisbart.com">http://mynameisbart.com</a>.</p>
                 </section>
                 <section class="contrast" data-background="./images/socket.jpg" data-state="attribution-active socket">
-                    <style>.socket .attribution:after { content: "idea-saras @ Flickr"; }</style>
+                    <style>.socket .attribution:after { content: '© idea-saras @ Flickr (CC BY 2.0)'; }</style>
                     <h1>What are plugins?</h1>
                     <ul>
                         <li class="fragment">Swappable extensions that provide logic for a specific (set of) task(s)</li>
@@ -73,7 +73,8 @@
                         <li class="fragment">Multiple instances can co-exist (reuse)</li>
                     </ul>
                 </section>
-                <section class="contrast" data-background="./images/druplicon.svg">
+                <section class="contrast" data-background="./images/druplicon.svg" data-state="attribution-active druplicon">
+                    <style>.druplicon .attribution:after { content: '(GPLv2)'; }</style>
                     <h1>Drupal 7 plugins</h1>
                     <ul>
                         <li class="fragment">Hook discovery (core and most contributed modules)</li>
@@ -84,10 +85,11 @@
                     </ul>
                 </section>
                 <section data-background="./images/confusion.jpg" data-state="attribution-active confusion">
-                    <style>.confusion .attribution:after { content: "mn_francis @ Flickr"; }</style>
+                    <style>.confusion .attribution:after { content: "© mn_francis @ Flickr (CC BY-NC 2.0)"; }</style>
                     <h1 class="contrast">Say what?</h1>
                 </section>
-                <section class="contrast" data-background="./images/drupal-8.svg">
+                <section class="contrast" data-background="./images/drupal-8.svg" data-state="attribution-active drupal-8">
+                    <style>.drupal-8 .attribution:after { content: '(GPLv2)'; }</style>
                     <h1>Drupal 8 plugins</h1>
                     <ul>
                         <li class="fragment">Are classes. Always.</li>
@@ -96,51 +98,51 @@
                     </ul>
                 </section>
                 <section data-background="./images/evil-wizard.jpg" data-state="attribution-active evil-wizard">
-                    <style>.evil-wizard .attribution:after { content: "julochka @ Flickr"; }</style>
+                    <style>.evil-wizard .attribution:after { content: "© julochka @ Flickr (CC BY-NC 2.0)"; }</style>
                     <h1 class="contrast">No more dark magic</h1>
                 </section>
                 <section>
                     <section data-background="./images/jargon.jpg" data-state="attribution-active jargon">
-                        <style>.jargon .attribution:after { content: "subsetsum @ Flickr"; }</style>
+                        <style>.jargon .attribution:after { content: "© subsetsum @ Flickr (CC BY-NC-ND 2.0)"; }</style>
                         <h1 class="contrast">Jargon, do you speak it?</h1>
                     </section>
                     <section data-background="./images/type.jpg" data-state="attribution-active type">
-                        <style>.type .attribution:after { content: "tunruh @ Flickr"; }</style>
+                        <style>.type .attribution:after { content: "© tunruh @ Flickr (CC BY-ND 2.0)"; }</style>
                         <h1 class="contrast">Plugin type</h1>
                     </section>
                     <section data-background="./images/definition.jpg" data-state="attribution-active definition">
-                        <style>.definition .attribution:after { content: "jwyg @ Flickr"; }</style>
+                        <style>.definition .attribution:after { content: "© jwyg @ Flickr (CC BY-SA 2.0)"; }</style>
                         <h1 class="contrast">Plugin (definition)</h1>
                     </section>
                     <section data-background="./images/discovery.jpg" data-state="attribution-active discovery">
-                        <style>.discovery .attribution:after { content: "skynoir @ Flickr"; }</style>
+                        <style>.discovery .attribution:after { content: "© dlr_de @ Flickr (CC BY-NC-ND 2.0)"; }</style>
                         <h1 class="contrast">Plugin discovery</h1>
                     </section>
                     <section data-background="./images/factory.jpg" data-state="attribution-active factory">
-                        <style>.factory .attribution:after { content: "spenceyc @ Flickr"; }</style>
+                        <style>.factory .attribution:after { content: "© spenceyc @ Flickr (CC BY-ND 2.0)"; }</style>
                         <h1 class="contrast">Plugin factory</h1>
                     </section>
                     <section data-background="./images/toolbox.jpg" data-state="attribution-active toolbox">
-                        <style>.toolbox .attribution:after { content: "jlgriffiths @ Flickr"; }</style>
+                        <style>.toolbox .attribution:after { content: "© jlgriffiths @ Flickr (CC BY-NC-ND 2.0)"; }</style>
                         <h1 class="contrast">Plugin manager (discovery + factory + ...)</h1>
                     </section>
                     <section data-background="./images/uncommon-objects.jpg" data-state="attribution-active uncommon-objects">
-                        <style>.uncommon-objects .attribution:after { content: "johnymutton @ Flickr"; }</style>
+                        <style>.uncommon-objects .attribution:after { content: "© johnymutton @ Flickr (CC BY-NC-ND 2.0)"; }</style>
                         <h1 class="contrast">Plugin instance</h1>
                     </section>
                     <section data-background="./images/clockwork.jpg" data-state="attribution-active clockwork">
-                        <style>.clockwork .attribution:after { content: "guysie @ Flickr"; }</style>
+                        <style>.clockwork .attribution:after { content: "© guysie @ Flickr (CC BY-SA 2.0)"; }</style>
                         <h1 class="contrast">Plugin configuration</h1>
                         <p></p>
                     </section>
                 </section>
                 <section class="contrast" data-background="./images/recreate.jpg" data-state="attribution-active recreate">
-                    <style>.recreate .attribution:after { content: "capedcrusader @ Flickr"; }</style>
+                    <style>.recreate .attribution:after { content: "© capedcrusader @ Flickr (CC BY-NC-ND 2.0)"; }</style>
                     <h1 >Recreating/cloning plugin instances</h1>
                     <p>Using Plugin type/manager, ID, and configuration through <code>ConfigurablePluginInterface</code>.</p>
                 </section>
-                <section class="contrast" data-background="./images/discovery-2.jpg" data-state="attribution-active discovery">
-                    <style>.discovery .attribution:after { content: "skynoir @ Flickr"; }</style>
+                <section class="contrast" data-background="./images/discovery-2.jpg" data-state="attribution-active discovery-2">
+                    <style>.discovery-2 .attribution:after { content: "© skynoir @ Flickr (CC BY-NC 2.0)"; }</style>
                     <h1>Discovery methods</h1>
                     <ul>
                         <li class="fragment">Annotated class discovery (mostly different logic)</li>
@@ -150,40 +152,40 @@
                     </ul>
                 </section>
                 <section data-background="./images/paperwork.jpg" data-state="attribution-active paperwork">
-                    <style>.paperwork .attribution:after { content: "bourgeoisbee @ Flickr"; }</style>
+                    <style>.paperwork .attribution:after { content: "© bourgeoisbee @ Flickr (CC BY-NC 2.0)"; }</style>
                     <h1 class="contrast">Forms</h1>
                 </section>
                 <section>
                     <section class="contrast" data-background="./images/soyuz.jpg" data-state="attribution-active soyuz">
-                        <style>.soyuz .attribution:after { content: "nasa2explore @ Flickr"; }</style>
+                        <style>.soyuz .attribution:after { content: "© nasa2explore @ Flickr (CC BY-NC 2.0)"; }</style>
                         <h1>There's a module for that</h1>
                         <p><a href="http://drupal.org/project/plugin">http://drupal.org/project/plugin</a></p>
                     </section>
                     <section data-background="./images/type-2.jpg" data-state="attribution-active type-2">
-                        <style>.type-2 .attribution:after { content: "vpickering @ Flickr"; }</style>
+                        <style>.type-2 .attribution:after { content: "© vpickering @ Flickr (CC BY-NC-ND 2.0)"; }</style>
                         <h1 class="contrast">Plugin type discovery</h1>
                     </section>
                     <section data-background="./images/aerial-view.jpg" data-state="attribution-active aerial-view">
-                        <style>.aerial-view .attribution:after { content: "ter-burg @ Flickr"; }</style>
+                        <style>.aerial-view .attribution:after { content: "© ter-burg @ Flickr (CC BY-SA 2.0)"; }</style>
                         <h1 class="contrast">Administrative overview</h1>
                     </section>
                     <section class="contrast" data-background="./images/tube-map.jpg" data-state="attribution-active tube-map">
-                        <style>.tube-map .attribution:after { content: "24736216@N07 @ Flickr"; }</style>
+                        <style>.tube-map .attribution:after { content: "© 24736216@N07 @ Flickr ((CC BY-SA 2.0)"; }</style>
                         <h1>Configuration schemas</h1>
                         <p><code>plugin.plugin_configuration.*.*</code></p>
                     </section>
                     <section class="contrast" data-background="./images/funnel.jpg" data-state="attribution-active funnel">
-                        <style>.funnel .attribution:after { content: "fdctsevilla @ Flickr"; }</style>
+                        <style>.funnel .attribution:after { content: "© fdctsevilla @ Flickr (CC BY 2.0)"; }</style>
                         <h1>Typed plugin definition API</h1>
                         <p class="fragment">Now: <code>PluginDefinitionMapperInterface</code></p>
                         <p class="fragment">Future: <code>PluginDefinitionInterface</code></p>
                     </section>
                     <section data-background="./images/cursor.jpg" data-state="attribution-active cursor">
-                        <style>.cursor .attribution:after { content: "86530412@N02 @ Flickr"; }</style>
+                        <style>.cursor .attribution:after { content: "© 86530412@N02 @ Flickr (CC BY 2.0)"; }</style>
                         <h1 class="contrast">Plugin selectors</h1>
                     </section>
                     <section data-background="./images/wheat-field.jpg" data-state="attribution-active wheat-field">
-                        <style>.wheat-field .attribution:after { content: "jaako @ Flickr"; }</style>
+                        <style>.wheat-field .attribution:after { content: "© jaako @ Flickr (CC BY-NC 2.0)"; }</style>
                         <h1 class="contrast">Field types/widgets/formatters</h1>
                     </section>
                 </section>
