--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
                     <h1>What are plugins?</h1>
                     <ul>
                         <li class="fragment">Swappable extensions that provide logic for a specific (set of) task(s)</li>
-                        <li class="fragment">Uniquely identifiable & metadata</li>
+                        <li class="fragment">Uniquely identifiable</li>
+                        <li class="fragment">Metadata</li>
                         <li class="fragment">Multiple instances can co-exist (reuse)</li>
                     </ul>
                 </section>
@@ -79,9 +80,8 @@
                     <ul>
                         <li class="fragment">Hook discovery (core and most contributed modules)</li>
                         <li class="fragment">File-based discovery (ctools)</li>
-                        <li class="fragment">Magic hooks/callbacks</li>
-                        <li class="fragment">Magic file includes</li>
-                        <li class="fragment">Some plugins are classes</li>
+                        <li class="fragment">Magic hooks/callbacks/includes</li>
+                        <li class="fragment">Some plugins are classed</li>
                     </ul>
                 </section>
                 <section data-background="./images/confusion.jpg" data-state="attribution-active confusion">
@@ -92,7 +92,7 @@
                     <style>.drupal-8 .attribution:after { content: '(GPLv2)'; }</style>
                     <h1>Drupal 8 plugins</h1>
                     <ul>
-                        <li class="fragment">Are classes. Always.</li>
+                        <li class="fragment">Are classed. Always.</li>
                         <li class="fragment">Should implement interfaces.</li>
                         <li class="fragment">Consistent API for discovering and instantiating plugins, regardless of type.</li>
                     </ul>
