--- a/index.html
+++ b/index.html
@@ -155,6 +155,11 @@
                     <style>.paperwork .attribution:after { content: "© bourgeoisbee @ Flickr (CC BY-NC 2.0)"; }</style>
                     <h1 class="contrast">Forms</h1>
                 </section>
+                <section class="contrast" data-background="./images/bottles.jpg" data-state="attribution-active bottles">
+                    <style>.bottles .attribution:after { content: "© 64525258@N00 @ Flickr (CC BY-NC-ND 2.0)"; }</style>
+                    <h1>Derivatives</h1>
+                    <p>One base plugin definition can be dynamically expanded into multiple derivative plugin definitions.</p>
+                </section>
                 <section>
                     <section class="contrast" data-background="./images/soyuz.jpg" data-state="attribution-active soyuz">
                         <style>.soyuz .attribution:after { content: "© nasa2explore @ Flickr (CC BY-NC 2.0)"; }</style>
