--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 			// https://github.com/hakimel/reveal.js#configuration
 			Reveal.initialize({
 				controls: false,
-				progress: true,
+				progress: false,
 				history: true,
 				center: true,
 
