PluginDefinitionInterface is no longer the future.

--- a/index.html
+++ b/index.html
@@ -234,8 +234,7 @@ system.admin_structure:
                     <section class="contrast" data-background="./images/funnel.jpg" data-state="attribution-active funnel">
                         <style>.funnel .attribution:after { content: "© fdctsevilla @ Flickr (CC BY 2.0)"; }</style>
                         <h1>Typed plugin definition API</h1>
-                        <p class="fragment">Now: <code>PluginDefinitionMapperInterface</code></p>
-                        <p class="fragment">Future: <code>PluginDefinitionInterface</code></p>
+                        <p><code>PluginDefinitionInterface</code></p>
                     </section>
                     <section data-background="./images/cursor.jpg" data-state="attribution-active cursor">
                         <style>.cursor .attribution:after { content: "© 86530412@N02 @ Flickr (CC BY 2.0)"; }</style>
