Explain that plugins are dynamically discoverable.

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
                     <h1>What are plugins?</h1>
                     <ul>
                         <li class="fragment">Swappable extensions that provide logic for a specific (set of) task(s)</li>
+                        <li class="fragment">Dynamically discoverable</li>
                         <li class="fragment">Uniquely identifiable</li>
                         <li class="fragment">Metadata</li>
                         <li class="fragment">Multiple instances can co-exist (reuse)</li>
