Emphasize most plugins are not classed in Drupal 7.

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         <li class="fragment">Hook discovery (core and most contributed modules)</li>
                         <li class="fragment">File-based discovery (ctools)</li>
                         <li class="fragment">Magic hooks/callbacks/includes</li>
-                        <li class="fragment">Some plugins are classed</li>
+                        <li class="fragment">Only some plugins are classed</li>
                     </ul>
                 </section>
                 <section data-background="./images/confusion.jpg" data-state="attribution-active confusion">
