Clarify plugin discovery methods.

--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
                 <section class="contrast" data-background="./images/post-its.jpg" data-state="attribution-active post-its">
                     <style>.post-its .attribution:after { content: "© ableman @ Flickr (CC BY-NC-ND 2.0)"; }</style>
                     <h1>Annotated class discovery</h1>
+                    <p>Placed in plugin-type-specific namespaces</p>
                     <pre>
                         <code>
 &lt;?php
@@ -182,6 +183,7 @@ class RestExport extends PathPluginBase implements ResponseDisplayPluginInterfac
                 <section class="contrast" data-background="./images/sunrise.jpg" data-state="attribution-active sunrise">
                     <style>.sunrise .attribution:after { content: "© matthiasb2009 @ Flickr (CC BY-SA 2.0)"; }</style>
                     <h1>YAML discovery</h1>
+                    <p>Placed in modules' root directories</p>
                     <pre>
                         <code>
 system.admin:
