Emphasize that plugin forms are embeddable, and mention subform state.

--- a/index.html
+++ b/index.html
@@ -206,9 +206,10 @@ system.admin_structure:
                     </code>
                 </pre>
                 </section>
-                <section data-background="./images/paperwork.jpg" data-state="attribution-active paperwork">
+                <section class="contrast" data-background="./images/paperwork.jpg" data-state="attribution-active paperwork">
                     <style>.paperwork .attribution:after { content: "© bourgeoisbee @ Flickr (CC BY-NC 2.0)"; }</style>
-                    <h1 class="contrast">Forms</h1>
+                    <h1>Embeddable forms</h1>
+                    <p>Subform state: https://www.drupal.org/node/2537732</p>
                 </section>
                 <section class="contrast" data-background="./images/bottles.jpg" data-state="attribution-active bottles">
                     <style>.bottles .attribution:after { content: "© 64525258@N00 @ Flickr (CC BY-NC-ND 2.0)"; }</style>
